--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>What Poem?</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
